--- a/ingrid/views/index.pug
+++ b/ingrid/views/index.pug
@@ -3,3 +3,23 @@
 block content
   h1= title
   p Welcome to #{title}
+  div
+    | Icons made by 
+    a(href="https://www.flaticon.com/authors/ocha", title="OCHA")
+        | OCHA 
+    | from 
+    a(href="https://www.flaticon.com/", title="Flaticon")
+        | www.flaticon.com 
+    | licensed by 
+    a(href="http://creativecommons.org/licenses/by/3.0/", title="Creative Commons BY 3.0", target="_blank")
+        | CC 3.0 BY
+  div
+    | Icons made by 
+    a(href="https://www.freepik.com/", title="Freepik")
+        | Freepik 
+    | from 
+    a(href="https://www.flaticon.com/", title="Flaticon")
+        | www.flaticon.com 
+    | licensed by 
+    a(href="http://creativecommons.org/licenses/by/3.0/", title="Creative Commons BY 3.0", target="_blank")
+        | CC 3.0 BY
