--- a/ingrid/views/layout.pug
+++ b/ingrid/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/main.css')
-  body
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+  body.form
     block content
