fixed some issues with links, added images

--- a/ingrid/views/survey-form.pug
+++ b/ingrid/views/survey-form.pug
@@ -1,7 +1,7 @@
 ﻿extends layout
 block content
-    div.container
-        div.text-center.mb-4
+    div.container.pt-5
+        div.text-center.mx-auto
             h3
                 | Page 1
             h1
@@ -20,22 +20,21 @@ block content
             div.text-center
                 div.btn-group.btn-blcok
                     each val in buttons
-                        input.btn.btn-primary.btn-lg(type="submit", name="button" value=`${val}`)
+                        input.btn.btn-primary.btn-lg(type="submit", name="button" value=`${val}` )
 
 
             if identifier
                 div.mt-5.text-center
                     h1= identifier
-                input(id="inputIdentifier", type="hidden", name="identifier", value=`${identifier}`)
+                input(id="inputIdentifier", type="hidden", name="identifier", value=`${identifier}` )
             else
                 div.mt-5
-                    span.label
-                        | Create an anonymous identifier with at least 8 characters including both letters and numbers (e.g., squirrel072)
-                        | and then come back to the questionnaire, enter your identifier on the questionnaire, so that we know you actually visited the site.
-
                 div.form-label-group.row
                     div.col-3
                     div.col-6
+                        span.label
+                            | Create an anonymous identifier with at least 8 characters including both letters and numbers (e.g., squirrel072)
+                            | and then come back to the questionnaire, enter your identifier on the questionnaire, so that we know you actually visited the site.
                         input.form-control.form-control-lg(id="inputIdentifier", type="text", name="identifier", placeholder="Anonymous Identifier")
                         label(for="inputIdentifier")
                             Password
