--- a/ingrid/views/layout.pug
+++ b/ingrid/views/layout.pug
@@ -2,8 +2,8 @@
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/main.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/style/main.css')
+    link(rel='stylesheet', href='/style/bootstrap.min.css')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
   body.form
     block content
