fix for making comment template var into object

--- a/ingrid/views/survey-form.pug
+++ b/ingrid/views/survey-form.pug
@@ -10,7 +10,7 @@ block content
 
             if comment
                 div.card.text-white.bg-secondary.mb-3.text-center
-                    h1= comment
+                    h1= comment.text
 
             div.form-label-group
                 textarea.form-control(id="inputPassword", name="comment", placeholder="Comment", cols="40", rows="5")
