--- a/ingrid/public/style/main.css
+++ b/ingrid/public/style/main.css
@@ -1,1 +1,34 @@
-﻿
+﻿.comment-icon {
+    height: 100px;
+    width: 100px;
+    max-height: 100px;
+    max-width: 100px;
+}
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
+}
+
+body {
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+
+#inputComment {
+    resize: none;
+}
