--- a/ingrid/public/style/main.css
+++ b/ingrid/public/style/main.css
@@ -1,8 +1,34 @@
-﻿.comment-icon {
-    height: 100px;
-    width: 100px;
-    max-height: 100px;
-    max-width: 100px;
+﻿
+.obfuscated {
+    color: transparent;
+    text-shadow: rgba(255, 255, 255, 0.95) 0px 0px 10px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#inputIdentifier::-webkit-input-placeholder {
+    font-size: 1em;
+}
+
+#inputIdentifier::-moz-placeholder {
+    font-size: 1em;
+}
+
+#inputIdentifier:-ms-input-placeholder {
+    font-size: 3em;
+}
+
+#inputIdentifier::placeholder {
+    font-size:  0.8em;
+}
+
+h2.obfuscated {
+    color: transparent;
+    text-shadow: rgba(255, 255, 255, 0.95) 0px 0px 20px;
 }
 
 html {
@@ -11,11 +37,10 @@ html {
 }
 
 .container {
-    width: auto;
-    max-width: 680px;
     padding: 0 15px;
 }
 
+/*
 body {
     margin-bottom: 60px;
 }
@@ -25,10 +50,43 @@ body {
     bottom: 0;
     width: 100%;
     height: 60px;
+    overflow: hidden;
+    max-height: 60px;
     line-height: 60px;
     background-color: #f5f5f5;
 }
+*/
 
 #inputComment {
     resize: none;
+}
+
+.comment-icon  { height: 3rem;
+                  width: 3rem; }
+h1          { font-size: 3rem; }
+h2          { font-size: 1.8rem; }
+p           { font-size: 1.2rem; }
+
+@media screen and (max-width: 1024px) {
+    h1      { font-size: 2rem; }
+    h2      { font-size: 1.2rem; }
+    p       { font-size: 1rem; }
+}
+@media screen and (max-width: 600px) {
+    h1      { font-size: 1.6rem; }
+    h2      { font-size: 1.4rem; }
+    p       { font-size: 1.2rem; }
+}
+@media screen and (max-width: 400px) {
+    h1      { font-size: 1.4rem; }
+    h2      { font-size: 1rem; }
+    p       { font-size: 1rem; }
+}
+@media screen and (max-width: 200px) {
+    h1      { font-size: 0.8rem; }
+    h2      { font-size: 0.5rem; }
+    p       { font-size: 0.3rem; }
+    .btn-responsive {
+              font-size: 0.2rem;
+    }
 }
