--- a/ingrid/views/survey-form.pug
+++ b/ingrid/views/survey-form.pug
@@ -2,39 +2,53 @@
 block content
     main.container(role="main")
         div.text-center
-            h2.py-5= title
+            h2(id="title")= title
         div.row.justify-content-center
             div.col-md-10
-                h1= surveyquery
+                h1(id="query")= surveyquery
         form.needs-validation(name="1", method="post", novalidate)
 
             div.row.justify-content-center
                 div.col-md-8
                     h2.mt-5
-                        | Comment
-                    div.card.text-white.bg-secondary
+                        | Comments
+                    div.card.text-white.bg-secondary.mb-3
                         div.card-header
                             div.row.no-gutters
                                 div.col
-                                    if identifier
-                                        h2
-                                            | You
-                                    else
-                                        h2.obfuscated
-                                            | Gibresh
-                                if img
+                                    h2.obfuscated
+                                        | Gibresh
+                                        
+                                if previmg
                                     div.col-auto
                                         div.img-fluid
-                                            img.comment-icon.card-img(src=`/img/${img}.svg` )
+                                            svg.comment-icon.card-img(viewBox=`${previmg.viewbox}`, style=`${previmg.style}`)
+                                                g
+                                                    path(id="img-path", style="fill:#010002;" d=`${previmg.data}` )
                         div.row
                             div.col
                                 div.text-center.p-3
-                                    if comment
+                                    p.obfuscated
+                                        | Poothe of the does a tres If Sander ther mebout waskes as about likes makin on tres?
+                                        | how out why ved Chrise cause saiday re the the buzzing-noist of tres of its so a lace fore.
+
+                    if comment
+                        div.card.text-white.bg-secondary
+                            div.card-header
+                                div.row.no-gutters
+                                    div.col
+                                        h2
+                                            | You
+                                    if img
+                                        div.col-auto
+                                            div.img-fluid
+                                                svg.comment-icon.card-img(viewBox=`${img.viewbox}`, style=`${img.style}`)
+                                                    g
+                                                        path(id="img-path", style="fill:#010002;" d=`${img.data}` )
+                            div.row
+                                div.col
+                                    div.text-center.p-3
                                         p= comment.text
-                                    else
-                                        p.obfuscated
-                                            | Poothe of the does a tres If Sander ther mebout waskes as about likes makin on tres?
-                                            | how out why ved Chrise cause saiday re the the buzzing-noist of tres of its so a lace fore.
             
             div.row.justify-content-center
                 div.col-md-6
