--- a/ingrid/views/survey-form.pug
+++ b/ingrid/views/survey-form.pug
@@ -1,46 +1,48 @@
 ﻿extends layout
 block content
-    main.container(role="main")
-        div.text-center
-            h2(id="title")= title
-        div.row.justify-content-center
-            div.col-md-10
-                h1(id="query")= surveyquery
-        form.needs-validation(name="1", method="post", novalidate)
+    nav.navbar.navbar-dark.bg-nav-blue.pb-5
+    
+    form.needs-validation(name="1", method="post", novalidate)
+        main.container.bg-faint-grey.py-4(role="main")   
+    
+            div.row.justify-content-center
+                div.col-xs-12.col-sm-12.col-md-10
+                    div.card.text-black.bg-light-blue.mb-3.p-4
+                        h1(id="query")= surveyquery
 
             div.row.justify-content-center
                 div.col-md-8
                     h2.mt-5
                         | Comments
-                    div.card.text-white.bg-secondary.mb-3
-                        div.card-header
+                    div.card.text-black.bg-light-grey.mb-3
+                        div.card-header.p-0
                             div.row.no-gutters
-                                div.col
-                                    h2.obfuscated
-                                        | Gibresh
+                                div.col.p-2
+                                    h2.obfuscated-black
+                                        | Jane Smith
                                         
                                 if previmg
-                                    div.col-auto
+                                    div.col-auto.pr-1.pt-1.pb-1
                                         div.img-fluid
-                                            svg.comment-icon.card-img(viewBox=`${previmg.viewbox}`, style=`${previmg.style}`)
+                                            svg.comment-icon.card-img(viewBox=`${previmg.viewbox}`, style=`${previmg.style}` )
                                                 g
-                                                    path(id="img-path", style="fill:#010002;" d=`${previmg.data}` )
+                                                    path.img-path(style="fill:#010002;" d=`${previmg.data}` )
                         div.row
                             div.col
                                 div.text-center.p-3
-                                    p.obfuscated
-                                        | Poothe of the does a tres If Sander ther mebout waskes as about likes makin on tres?
+                                    p.obfuscated-black
+                                        | Pothe of the does a tres If Sander ther mebout waskes as about likes makin on tres?
                                         | how out why ved Chrise cause saiday re the the buzzing-noist of tres of its so a lace fore.
 
                     if comment
-                        div.card.text-white.bg-secondary
-                            div.card-header
+                        div.card.text-black.bg-light-grey
+                            div.card-header.p-0
                                 div.row.no-gutters
-                                    div.col
+                                    div.col.p-2
                                         h2
                                             | You
                                     if img
-                                        div.col-auto
+                                        div.col-auto.pr-1.pt-1.pb-1
                                             div.img-fluid
                                                 svg.comment-icon.card-img(viewBox=`${img.viewbox}`, style=`${img.style}`)
                                                     g
@@ -55,19 +57,29 @@ block content
                     div.form-label-group.p-3
                         textarea.form-control(id="inputComment", name="comment", placeholder="Comment", cols="40", rows="5")
 
-            div.text-center
-                div.btn-group.y-5
-                    each val in buttons
-                        input.btn.btn-primary.btn-responsive(type="submit", name="button" value=`${val}` )
+            div.row.justify-content-center
+                div.col-lg-4.col-md-6.col-sm-8.col-xs-10.text-center
+                    each btn in buttons
+                        div.row.my-2.justify-content-center
+                            if btn.img
+                                div.col-9.pr-0
+                                    input.form-control.btn(id=`${btn.id}`, type="submit", name="button" value=`${btn.name}` )
+                                div.col-3.pl-2
+                                    div.img-fluid
+                                        svg.submit-icon(viewBox=`${btn.img.viewbox}`, style=`${btn.img.style}` )
+                                            g
+                                                path.img-path(style="fill:#010002;" d=`${btn.img.data}` )
+                            else
+                                div.col-md-6
+                                    input.form-control.btn-primary(type="submit", name="button" value=`${btn.name}` )
 
-
+        div.container
+            div.pt-3
             if identifier
-                div.mt-5.text-center.mb-5
+                div.text-center
                     h1= identifier
                 input(id="inputIdentifier", type="hidden", name="identifier", value=`${identifier}` )
             else
-                div.pt-5
-                div.pt-5
                 div.row.justify-content-center
                     div.col-lg-6.pb-3
                         span.label
@@ -76,7 +88,7 @@ block content
                 div.row.justify-content-center
                     div.col-md-4
                         input.form-control.form-control-lg(id="inputIdentifier", type="text", name="identifier", placeholder="Anonymous Identifier", 
-                            pattern="[a-zA-Z]+[0-9]+" minlength="8", maxlength="255", required)
+                            pattern="[a-zA-Z0-9]+" minlength="8", maxlength="255", required)
                         div.invalid-feedback
                             | Identifier:
                             br
@@ -84,7 +96,9 @@ block content
                                 li
                                     | Must be at least 8 characters
                                 li
-                                    | Must consist only of letters followed by numbers
+                                    | Contain both numbers and letters
+                                li
+                                    | No special characters
             div.pt-3
                     
     if 0
