Fixed issue with button images not being defined, finished implementation of user interaction tracking

--- a/ingrid/views/layout.pug
+++ b/ingrid/views/layout.pug
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/style/bootstrap.min.css')
     link(rel='stylesheet', href='/style/main.css')
     script(src='/js/srv.js')
-    script(src='/js/CJSON.js')
+    script(src='/js/JSONC.js')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
   body.form
     block content
